edit using fragments, layout in templates and internationalization

--- a/thyme-wizard-application/src/main/resources/templates/fragments/sidebar-menu.html
+++ b/thyme-wizard-application/src/main/resources/templates/fragments/sidebar-menu.html
@@ -37,8 +37,9 @@
                         @click="closeSidebar">
                     <span class="sr-only">Close sidebar</span>
                     <!-- Heroicon name: x -->
-                    <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                    <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                         stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
                     </svg>
                 </button>
             </div>
@@ -47,56 +48,14 @@
                      th:src="@{/img/application-logo.svg}" alt="Application Logo"/>
             </div>
             <div class="mt-5 flex-1 h-0 overflow-y-auto">
-                <nav class="px-2 space-y-1">
-                    <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
-                    <a href="#" class="bg-gray-100 text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Current: "text-gray-500", Default: "text-gray-400 group-hover:text-gray-500" -->
-                        <!-- Heroicon name: home -->
-                        <svg class="text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                        Dashboard
-                    </a>
-
-                    <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Heroicon name: users -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                        Team
-                    </a>
-
-                    <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Heroicon name: folder -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
-                        </svg>
-                        Projects
-                    </a>
-
-                    <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Heroicon name: calendar -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                        </svg>
-                        Calendar
-                    </a>
-
-                    <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Heroicon name: inbox -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
-                        </svg>
-                        Documents
-                    </a>
-
-                    <a href="#" class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group flex items-center px-2 py-2 text-base font-medium rounded-md">
-                        <!-- Heroicon name: chart-bar -->
-                        <svg class="text-gray-400 group-hover:text-gray-500 mr-4 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                        </svg>
-                        Reports
-                    </a>
+                <nav class="px-2">
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.dashboard}, menuItem='dashboard', icon='dashboard')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.users}, menuItem='user', icon='user')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.teams}, menuItem='team', icon='user-group')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.projects}, menuItem='projects', icon='projects')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.calendar}, menuItem='calendar', icon='calendar')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.documents}, menuItem='documents', icon='documents')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title=#{menu.reports}, menuItem='reports', icon='reports')"></a>
                 </nav>
             </div>
         </div>
@@ -113,46 +72,17 @@
                      th:src="@{/img/application-logo.svg}" alt="Application Logo"/>
             </div>
             <div class="mt-5 flex-grow flex flex-col">
-                <nav class="flex-1 px-2 bg-white space-y-1">
-                    <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
-                    <a th:replace="fragments :: menu-item('Dashboard', '/#', ~{::#dashboardicon})">
-                        <svg id="dashboardicon" class="text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-                        </svg>
-                    </a>
-
-                    <a th:replace="fragments :: menu-item('Team', '/team', ~{::#teamicon})">
-                        <svg id="teamicon" class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                        </svg>
-                    </a>
-
-                    <a th:replace="fragments :: menu-item('Projects', '/projects', ~{::#projecticon})">
-                        <svg id="projecticon" class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" />
-                        </svg>
-                    </a>
-
-                    <a th:replace="fragments :: menu-item('Calendar', '/calendar', ~{::#calendaricon})">
-                        <svg id="calendaricon" class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                        </svg>
-                    </a>
-
-
-                    <a th:replace="fragments :: menu-item('Documents', '/documents', ~{::#documenticon})">
-                        <svg id="documenticon" class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4" />
-                    </svg>
-                    </a>
-
-                    <a th:replace="fragments :: menu-item('Reports', '/reports', ~{::#reporticon})">
-                        <svg id="reporticon" class="text-gray-400 group-hover:text-gray-500 mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                        </svg>
-                    </a>
-
+                <!-- tag::desktop-nav[] -->
+                <nav class="flex-1 px-2 bg-white">
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title=#{menu.dashboard}, menuItem='dashboard', icon='dashboard')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link=@{/users}, title=#{menu.users}, menuItem='users', icon='user')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link=@{/teams}, title=#{menu.teams}, menuItem='teams', icon='user-group')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title=#{menu.projects}, menuItem='projects', icon='projects')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title=#{menu.calendar}, menuItem='calendar', icon='calendar')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title=#{menu.documents}, menuItem='documents', icon='documents')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title=#{menu.reports}, menuItem='reports', icon='reports')"></a>
                 </nav>
+                <!-- end::desktop-nav[] -->
             </div>
         </div>
     </div>
