--- a/thyme-wizard-application/src/main/resources/templates/users/list.html
+++ b/thyme-wizard-application/src/main/resources/templates/users/list.html
@@ -3,21 +3,45 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout/layout}"
-        th:with="activeMenuItem='users'"> <!--.-->
+        th:with="activeMenuItem='users'">
 <head>
     <title>Users</title>
 </head>
 <body>
 <div layout:fragment="page-content">
-    <!-- tag::users-title[] -->
     <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
         <h1 class="text-2xl font-semibold text-gray-900"
             th:text="#{users.title}">Users</h1>
     </div>
-    <!-- end::users-title[] -->
     <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
         <div class="py-4">
-            <span></span>
+            <div class="flex flex-col">
+                <div class="-my-2 py-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
+                    <div class="align-middle inline-block min-w-full shadow overflow-hidden rounded-md sm:rounded-lg border-b border-gray-200">
+                        <table class="min-w-full">
+                            <thead>
+                            <tr>
+                                <th th:replace="fragments/table :: header(#{user.name})"></th>
+                                <th th:replace="fragments/table :: header(#{user.gender})"></th>
+                                <th th:replace="fragments/table :: header(#{user.birthday})"></th>
+                                <th th:replace="fragments/table :: header(#{user.email})"></th>
+                                <th th:replace="fragments/table :: header('')"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="bg-white" th:each="user : ${users}">
+                                <td th:replace="fragments/table :: data(contents=${user.userName.fullName},primary=true)"></td>
+                                <td th:replace="fragments/table :: data(${user.gender})"></td>
+                                <td th:replace="fragments/table :: data(${user.birthday})"></td>
+                                <td th:replace="fragments/table :: data(${user.email.asString()})"></td>
+                                <td th:replace="fragments/table :: dataWithLink(#{edit}, '#')"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div th:replace="fragments/pagination :: controls(page=${users})"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
