--- a/thyme-wizard-application/src/main/resources/templates/fragments/table.html
+++ b/thyme-wizard-application/src/main/resources/templates/fragments/table.html
@@ -8,7 +8,9 @@
   <tr>
     <!-- tag::th[] -->
     <th th:fragment="header(title)"
+        th:with="hideOnMobile=${hideOnMobile?:false}"
         class="px-6 py-3 border-b border-gray-200 bg-gray-50 text-left text-xs leading-4 font-medium text-gray-500 uppercase tracking-wider"
+        th:classappend="${hideOnMobile?'hidden sm:table-cell':''}"
         th:text="${title}">
       Header title
     </th>
@@ -19,9 +21,9 @@
   <tr>
     <!-- tag::td[] -->
     <td th:fragment="data(contents)"
-        th:with="primary=${primary?: false}"
+        th:with="primary=${primary?: false},hideOnMobile=${hideOnMobile?:false}"
         class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500"
-        th:classappend="${primary?'font-medium text-gray-900':''}"
+        th:classappend="|${primary?'font-medium text-gray-900':''} ${hideOnMobile?'hidden sm:table-cell':''}|"
         th:text="${contents}">
       Table data contents
     </td>
