--- a/thyme-wizard-application/src/main/resources/templates/users/list.html
+++ b/thyme-wizard-application/src/main/resources/templates/users/list.html
@@ -21,20 +21,20 @@
                         <table class="min-w-full">
                             <thead>
                             <tr>
-                                <th th:replace="fragments/table :: header(#{user.name})"></th>
-                                <th th:replace="fragments/table :: header(#{user.gender})"></th>
-                                <th th:replace="fragments/table :: header(#{user.birthday})"></th>
-                                <th th:replace="fragments/table :: header(#{user.email})"></th>
+                                <th th:replace="fragments/table :: header('Name')"></th>
+                                <th th:replace="fragments/table :: header(title='Gender',hideOnMobile=true)"></th>
+                                <th th:replace="fragments/table :: header(title='Birthday',hideOnMobile=true)"></th>
+                                <th th:replace="fragments/table :: header(title='Email',hideOnMobile=true)"></th>
                                 <th th:replace="fragments/table :: header('')"></th>
                             </tr>
                             </thead>
                             <tbody>
                             <tr class="bg-white" th:each="user : ${users}">
                                 <td th:replace="fragments/table :: data(contents=${user.userName.fullName},primary=true)"></td>
-                                <td th:replace="fragments/table :: data(${user.gender})"></td>
-                                <td th:replace="fragments/table :: data(${user.birthday})"></td>
-                                <td th:replace="fragments/table :: data(${user.email.asString()})"></td>
-                                <td th:replace="fragments/table :: dataWithLink(#{edit}, '#')"></td>
+                                <td th:replace="fragments/table :: data(contents=${user.gender},hideOnMobile=true)"></td>
+                                <td th:replace="fragments/table :: data(contents=${user.birthday},hideOnMobile=true)"></td>
+                                <td th:replace="fragments/table :: data(contents=${user.email.asString()},hideOnMobile=true)"></td>
+                                <td th:replace="fragments/table :: dataWithLink('Edit', '#')"></td>
                             </tr>
                             </tbody>
                         </table>
