--- a/thyme-wizard-application/src/main/resources/templates/users/list.html
+++ b/thyme-wizard-application/src/main/resources/templates/users/list.html
@@ -33,7 +33,7 @@
                                 <td th:replace="fragments/table :: data(contents=${user.gender},hideOnMobile=true)"></td>
                                 <td th:replace="fragments/table :: data(contents=${user.birthday},hideOnMobile=true)"></td>
                                 <td th:replace="fragments/table :: data(contents=${user.email.asString()},hideOnMobile=true)"></td>
-                                <td th:replace="fragments/table :: dataWithLink('Edit', '#')"></td>
+                                <td th:replace="fragments/table :: dataWithLink('Edit', @{'/users/'+ ${user.id.asString()}})"></td>
                             </tr>
                             </tbody>
                         </table>
